[package]
name = "scpm"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Robinson"]
description = "A multi-objective task allocation software in multiple agent systems"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rand = "0.8.4"
libc = "0.2.119"
blis-src = { version = "0.2", features = ["cblas", "static"] }
cblas-sys = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8"
hashbrown = "0.12.0"
float_eq = "0.7.0"
gurobi = "0.3.4"
indicatif = "0.16.2"
threadpool = "1.8.1"
byteorder = "1.4.3"
rayon = "1.5.3"
glob = "0.3.0"

[build-dependencies]
bindgen = "0.59.2"
